fixed overflow on body

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -27,6 +27,7 @@ html,
 body {
   height: 100%;
   isolation: isolate;
+  overflow-x: hidden;
 }
 
 body {
